# diario

./: .env.example  .gitignore  AGENTS.md  README.md  agents.md  justfile
.github/workflows/: ci.yml
crates/compitutto/: Cargo.toml
crates/compitutto/db/migrations/: 001_initial_schema.sql  002_settings.sql
crates/compitutto/src/: data.rs  db.rs  html.rs  main.rs  parser.rs  server.rs  types.rs
crates/compitutto/src/html/: assets.rs  calendar.rs  mod.rs  settings.rs
crates/raschietto/: Cargo.toml
crates/raschietto/src/: browser.rs  config.rs  main.rs  scraper.rs
docs/plans/: sqlite-study-sessions-dragdrop.md
